# BookManager

./: Book.h  BookItemWidget.h  CMakeLists.txt  DatabaseManager.h  Login.cpp  Login.h  Login.ui  Register.cpp  Register.h  Register.ui  User.h  UserSession.h  categorydropdown.cpp  categorydropdown.h  main.cpp  mainwindow.h  novel.cpp  novel.h  novel.qrc  novel.ui
